@@ -22,4 +22,42 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+        <id>native</id>
+        <build>
+            <plugins>
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <version>0.9.13</version>
+                <extensions>true</extensions>
+                <executions>
+                <execution>
+                    <id>build-native</id>
+                    <goals>
+                    <goal>build</goal>
+                    </goals>
+                    <phase>package</phase>
+                </execution>
+                <execution>
+                    <id>test-native</id>
+                    <goals>
+                    <goal>test</goal>
+                    </goals>
+                    <phase>test</phase>
+                </execution>
+                </executions>
+                <configuration>
+                    <mainClass>gameoflife.Main</mainClass>
+                    <buildArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>--install-exit-handlers</arg>
+                    </buildArgs>
+                </configuration>
+            </plugin>
+            </plugins>
+        </build>
+        </profile>
+    </profiles>
 </project>
